# patternvault-mcp

./: README.md  fastmcp.json  main.py  pyproject.toml
patternvault-readmes/: 00-overview.md  01-folder-structure.md  02-architecture-patterns.md  03-coding-conventions.md  04-feature-pattern.md  05-ui-patterns.md  06-backend-patterns.md  07-data-modeling.md  08-testing-patterns.md  09-agent-usage-guide.md  10-pattern-cards.md  supabase-setup.md
src/patternvault_mcp/: __init__.py  auth.py  pattern_docs.py  resources.py  server.py  settings.py  tools.py
